--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
   "license": "MIT",
   "dependencies": {
     "next": "latest",
+    "qrcode.react": "^1.0.0",
     "react": "latest",
-    "react-dom": "latest",
-    "qrcode.react": "^1.0.0"
+    "react-dom": "latest"
   },
   "devDependencies": {
     "eslint": "latest",
     "eslint-config-next": "latest",
     "typescript": "latest"
-  }
+  },
+  "packageManager": "yarn@4.12.0"
 }
