--- a/package.json
+++ b/package.json
@@ -1,29 +1,22 @@
 {
   "name": "qr-code-generator",
   "version": "1.0.0",
-  "description": "A simple QR code generator built with Next.js",
-  "main": "index.js",
+  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint ."
+    "lint": "next lint"
   },
-  "keywords": [
-    "qr-code",
-    "generator",
-    "nextjs",
-    "react"
-  ],
-  "author": "Your Name",
-  "license": "MIT",
   "dependencies": {
     "next": "latest",
-    "qrcode.react": "^1.0.0",
     "react": "latest",
     "react-dom": "latest"
   },
   "devDependencies": {
+    "@types/node": "latest",
+    "@types/react": "latest",
+    "@types/react-dom": "latest",
     "eslint": "latest",
     "eslint-config-next": "latest",
     "typescript": "latest"
