--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "react-dom": "latest"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "latest",
     "@types/qrcode": "^1",
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "eslint": "latest",
     "eslint-config-next": "latest",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
     "typescript": "latest"
   },
   "packageManager": "yarn@4.12.0"
